Implemented Register View, and moved navbar to layout

--- a/reView/reView/Views/Home/Index.cshtml
+++ b/reView/reView/Views/Home/Index.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -11,25 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <img src="/assets/logoo.svg.png" alt="logo" class="logo">
-        <nav>
-            <div class="hamburger">
-                <div class="line"></div>
-                <div class="line"></div>
-                <div class="line"></div>
-            </div>
-            <ul class="nav-area">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Phones</a></li>
-                <li><a href="#">Headphones</a></li>
-            </ul>
-        </nav>
-        <div id="authentication">
-            <a href="#" class="btn-area">Login</a>
-            <a href="#" class="btn-area">Register</a>
-        </div>
-    </header>
+   
     <div id="center-text">
         <h1>reView</h1>
         <p>Review your favourite tech all in one place</p>
