--- a/reView/reView/Views/Shared/_Layout.cshtml
+++ b/reView/reView/Views/Shared/_Layout.cshtml
@@ -1,4 +1,8 @@
-﻿<!DOCTYPE html>
+﻿
+@inject SignInManager<IdentityUser> signInManager;
+
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -19,14 +23,25 @@
                 <div class="line"></div>
             </div>
             <ul class="nav-area">
-                <li><a href="#">Home</a></li>
+                <li><a asp-action="Index" asp-controller="Home">Home</a></li>
                 <li><a href="#">Phones</a></li>
                 <li><a href="#">Headphones</a></li>
             </ul>
         </nav>
         <div id="authentication">
-            <a href="#" class="btn-area">Login</a>
-            <a asp-action="Register" asp-controller="Account" class="btn-area">Register</a>
+            @if (signInManager.IsSignedIn(User))
+            {
+                <form method="post" asp-action="Logout" asp-controller="Account">
+                    <button  class="btn-area" type="submit">
+                        Logout @User.Identity.Name
+                    </button>
+                </form>
+            }
+            else
+            {
+            <a asp-action="Login" asp-controller="Account" class="btn-area">Login</a>
+            <a asp-action="Register" asp-controller="Account" class="btn-area">Register</a>              
+            }
         </div>
     </header>
     <div class="container">
