ItemPage now works for phones and headphones

--- a/reView/reView/Views/Shared/_Layout.cshtml
+++ b/reView/reView/Views/Shared/_Layout.cshtml
@@ -23,9 +23,9 @@
                 <div class="line"></div>
             </div>
             <ul class="nav-area">
-                <li><a asp-action="Index" asp-controller="Home">Home</a></li>
-                <li><a href="#">Phones</a></li>
-                <li><a href="#">Headphones</a></li>
+                <li><strong><a asp-action="Index" asp-controller="Home">Home</a></strong></li>
+                <li><strong><a asp-action="Phones" asp-controller="ListItems">Phones</a></strong></li>
+                <li><strong><a asp-action="Headphones" asp-controller="ListItems">Headphones</a></strong></li>
             </ul>
         </nav>
         <div id="authentication">
