--- a/reView/reView/wwwroot/css/layout.css
+++ b/reView/reView/wwwroot/css/layout.css
@@ -28,6 +28,7 @@ header {
     align-items: center;
     padding: 20px 70px;
     border-bottom: 2px solid black;
+   
 }
 
 .logo {
@@ -51,7 +52,7 @@ header {
 .nav-area li a {
     transition: .3s;
     color: #000000;
-    font-size: 2vh;
+    font-size: 1em;
 }
 
 .nav-area li a:hover {
