--- a/reView/reView/Views/Shared/_Layout.cshtml
+++ b/reView/reView/Views/Shared/_Layout.cshtml
@@ -44,11 +44,12 @@
             }
         </div>
     </header>
-    <div class="container">
+    @*<div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
-    </div>
+    </div>*@
+    @RenderBody()
 
     <script src="~/js/hamburger.js"></script>
    
