--- a/reView/reView/wwwroot/css/layout.css
+++ b/reView/reView/wwwroot/css/layout.css
@@ -68,6 +68,7 @@ header {
     padding: 10px 30px;
     border-radius: 5px;
     background: #FF5F15;
+    
 }
 
 .btn-area:hover {
@@ -82,7 +83,23 @@ header {
 }
 
 
+@media (max-width:600px) {
+    .btn-area {
+        font-size: 10px;
+        padding: 10px 15px;
+        position: relative;
+        left: 2em;
+    }
 
+    .logo {
+        padding-right: 1em;
+        position: relative;
+        right: 3em;
+    }
+    #authentication {
+        padding-left: 0em;
+    }
+}
 
 @media (max-width: 950px) {
     .line {
@@ -109,6 +126,7 @@ header {
         position: relative;
         left: -3em;
         border: none;
+        padding-left: 0;
     }
 
     .nav-area {
