--- a/reView/reView/Views/ListItems/SingleItem.cshtml
+++ b/reView/reView/Views/ListItems/SingleItem.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@model Item
+@inject SignInManager<ApplicationUser> signInManager;
 
 <!DOCTYPE html>
 <html lang="en">
@@ -17,44 +18,40 @@
     <main>
         <div id="slider">
             <div id="slider-main-picture-container">
-                <img alt="picture" src="/assets/main_oneplus9pro.png" />
+                <img alt="picture" src="@("/assets/"+Model.MainPicture)" />
             </div>
             <div id="slider-thumbnails-container">
-                <div class="thumbnail selected" data-large-img-url="/assets/main_oneplus9pro.png">
-                    <img src="/assets/main_oneplus9pro.png" alt="onepluspro" />
+                <div class="thumbnail selected" data-large-img-url="@("/assets/"+Model.MainPicture)">
+                    <img src="@("/assets/"+Model.MainPicture)" alt="onepluspro" />
                 </div>
-                <div class="thumbnail" data-large-img-url="/assets/main_iphone_12.png">
-                    <img src="/assets/main_iphone_12.png" alt="steelarctis" />
+                <div class="thumbnail" data-large-img-url="@("/assets/"+Model.SecondPicture)">
+                    <img src="@("/assets/"+Model.SecondPicture)" alt="steelarctis" />
                 </div>
             </div>
         </div>
         <div id="information">
-            <h1 id="information-title">Iphone 12</h1>
-            <label id="price">$300</label>
+            <h1 id="information-title">@Model.Name</h1>
+            <label id="price">$@Model.Price</label>
             <div id="description">
                 <h3 id="description-tittle">Product details</h3>
                 <p id="description-text">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat. Duis aute irure dolor in
-                    reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-                    deserunt mollit anim id est laborum.
+                    @Model.Description
                 </p>
             </div>
         </div>
     </main>
     <section id="review-section">
         <h2 id="review-section-title">Reviews</h2>
-
-        <span>New Review:</span>
-        <form action="">
-            <textarea id="review-input" type="text"></textarea>
-            <div class="submit-button">
-                <input type="submit" value="Submit">
-            </div>
-        </form>
+        @if (signInManager.IsSignedIn(User))
+        {
+            <span>New Review:</span>
+            <form action="">
+                <textarea id="review-input" type="text"></textarea>
+                <div class="submit-button">
+                    <input type="submit" value="Submit">
+                </div>
+            </form>
+        }
         <div id="comment-container">
             <div class="comment">
                 <div class="comment-user">
