Implemented single item design

--- a/reView/reView/wwwroot/css/layout.css
+++ b/reView/reView/wwwroot/css/layout.css
@@ -24,7 +24,7 @@ header {
     align-items: center;
     padding: 20px 70px;
     border-bottom: 2px solid black;
-   
+    background-color: dimgray; 
 }
 
 .logo {
