--- a/reView/reView/wwwroot/css/singleitem.css
+++ b/reView/reView/wwwroot/css/singleitem.css
@@ -2,13 +2,16 @@
     
     font-family: 'Roboto', sans-serif;
 }
+html {
+    height: 100%;
+}
 
 body {
+    height: 100%;
     margin: 0;
-    --primary-color: #2d5c88;
-    --light-primary-color: #96aec4;
-    --secondary-color: #4e4e4e;
-    --light-secondary-color: #d3d3d3;
+    --primary-color: #fc6015;
+    --light-primary-color: #ff8c00;
+    background-color: gainsboro;
 }
 
 main {
@@ -16,8 +19,24 @@ main {
     margin: 4em auto;
     padding: 0 3rem;
     display: flex;
-    height: 450px;
+    min-height: 450px;
+    background-color: gainsboro;
+    background-size: cover;
+    
+    
+
 }
+
+/*main:before {
+    content: '';
+    position: absolute;
+    height: 100%;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    background: gainsboro;
+    z-index: -1;
+}*/
 
 
 #slider-thumbnails-container {
@@ -31,24 +50,25 @@ main {
 }
 
 #slider-thumbnails-container .thumbnail {
-    border-bottom: 2px solid transparent;
+    border-bottom: 3px solid transparent;
     cursor: pointer;
     width: 155px;
     height: 156px;
 }
 
 #slider-thumbnails-container .thumbnail.selected {
-    border-bottom: 2px solid var(--primary-color);
+    border-bottom: 3px solid var(--primary-color);
 }
 
 #slider-thumbnails-container .thumbnail:hover {
-    border-bottom: 2px solid var(--light-primary-color);
+    border-bottom: 3px solid var(--light-primary-color);
 }
 
 #slider {
     margin-top: 10px;
     width: 380px;
     height: 100%;
+    padding-right: 1rem;
 }
 
 #slider-main-picture-container {
@@ -90,8 +110,26 @@ main {
     padding: 0 3rem;
     display: flex;
     flex-direction: column;
+    background-color: dimgray;
+    
+    margin-bottom: 0;
+    
 }
 
+#review-section #review-section-title{
+    background-color: #fc6015;
+    width: 50%;
+    
+    padding-top: 0.25rem;
+    padding-bottom: 0.25rem;
+    padding-left: 10px;
+    border-radius: 0 3px 3px 0;
+}
+
+#review-section span{
+    color: black;
+    font-weight: 700;
+}
 
 #review-section form {
     height: auto;
@@ -103,22 +141,54 @@ main {
     width: 80%;
     height: 80px;
     resize: none;
+    outline:none;
 }
 
-#review-section .submit-button {
-    padding: 2px;
+#review-section #review-input:focus{
+    
+    border: 2px solid black;
+}
+
+#review-section .submit-button input{
+    padding: 3px;
+    cursor: pointer;
+    height: 100%;
+    width: 5rem;
+
+    outline: none;
+    color: #fff;
+    border: none;
+
+    font-size: 15px;
+    font-weight: 600;
+    
+    border-radius: 5px;
+    background-color: #FF5F15;
+}
+
+
+
+#review-section .submit-button input:hover{
+    
+    background-color: #FF5F18;
 }
 
 #comment-container {
     padding: 2rem 0;
+   
+    
 }
 
-
+#comment-container .comment {
+    background-color: gainsboro;
+    border-radius: 5px;
+    
+}
 
 #comment-container .comment-user {
     display: flex;
     align-items: center;
-    
+    padding-left: 1rem;
 }
 
 #comment-container .comment-username {
@@ -128,6 +198,11 @@ main {
 #comment-container .comment img {
     width: 35px;
     height: 35px;
+}
+
+#comment-container .comment-text{
+    padding-left: 1rem;
+    padding-bottom: 1.5rem; 
 }
 
 @media screen and (max-width: 650px) {
