--- a/reView/reView/wwwroot/css/layout.css
+++ b/reView/reView/wwwroot/css/layout.css
@@ -59,11 +59,13 @@ header {
     cursor: pointer;
     color: #fff;
     font-size: 16px;
-    letter-spacing: 2px;
+    letter-spacing: 1px;
     text-transform: uppercase;
     padding: 10px 30px;
     border-radius: 5px;
     background: #FF5F15;
+    outline: none;
+    border: none;
     
 }
 
@@ -76,26 +78,15 @@ header {
     border-left: 2px solid black;
     padding: 1em 0;
     padding-left: 3em;
+    min-width: 255px;
+    
+    
 }
 
 
-@media (max-width:600px) {
-    .btn-area {
-        font-size: 10px;
-        padding: 10px 15px;
-        position: relative;
-        left: 2em;
-    }
 
-    .logo {
-        padding-right: 1em;
-        position: relative;
-        right: 3em;
-    }
-    #authentication {
-        padding-left: 0em;
-    }
-}
+
+
 
 @media (max-width: 950px) {
     .line {
@@ -129,13 +120,15 @@ header {
         display: none;
         flex-direction: column;
         position: fixed;
+        margin-right: 0;
         justify-content: space-evenly;
         background: #FF7518;
         height: 35vh;
-        width: 30%;
+        width: 40%;
         right: 0;
         top: 11%;
         z-index: 2;
+        border: 3px solid black;
     }
 
     .nav-area.show {
@@ -144,6 +137,7 @@ header {
 
     .nav-area li {
         text-align: center;
+        
     }
 
     .nav-area li a {
@@ -154,5 +148,51 @@ header {
 
     .nav-area li a:hover {
         color: #696969;
+    }
+}
+
+@media (max-width:600px) {
+    .btn-area {
+        font-size: 10px;
+        padding: 10px 15px;
+        position: relative;
+        left: 2em;
+    }
+
+    .logo {
+        padding-right: 1em;
+        position: relative;
+        right: 3em;
+    }
+
+    #authentication {
+        padding-left: 0em;
+        min-width: 110px;
+    }
+
+    .nav-area {
+        width: 100%;
+        
+    }
+}
+
+@media screen and (max-width:360px) {
+    .btn-area {
+    }
+
+    #authentication {
+        justify-content: center;
+        display: flex;
+        height: 65px;
+    }
+
+    .nav-area {
+        width: 100%;
+        top: 12.5%;
+    }
+
+    .logo {
+        height: 40px;
+        width: auto;
     }
 }
